--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -3,7 +3,7 @@ name: asdf            # workflow name
 on:
   push:                                       
     branches:                                 # similar to "only" in GitLab
-      - main
+      - master
 
 jobs:
   build:
